# atlas-talk

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  atlas-talk  atlas-talk-llama-index  main.py  pyproject.toml  requirements.txt  setup.py  tests.py
chat/: main.py  tests.py
collect/: main.py
common/: __init__.py
data/atlascli-command-reference/: atlas.md  atlas_accessLists.md  atlas_accessLists_create.md  atlas_accessLists_delete.md  atlas_accessLists_describe.md  atlas_accessLists_list.md  atlas_accessLogs.md  atlas_accessLogs_list.md  atlas_alerts.md  atlas_alerts_acknowledge.md  atlas_alerts_describe.md  atlas_alerts_list.md  atlas_alerts_settings.md  atlas_alerts_settings_create.md  atlas_alerts_settings_delete.md  atlas_alerts_settings_describe.md  atlas_alerts_settings_disable.md  atlas_alerts_settings_enable.md  atlas_alerts_settings_fields.md  atlas_alerts_settings_fields_type.md  atlas_alerts_settings_list.md  atlas_alerts_settings_update.md  atlas_alerts_unacknowledge.md  atlas_auditing.md  atlas_auditing_describe.md  atlas_auth.md  atlas_auth_login.md  atlas_auth_logout.md  atlas_auth_register.md  atlas_auth_whoami.md  atlas_backups.md  atlas_backups_compliancePolicy.md  atlas_backups_compliancePolicy_describe.md  (+416 more)
env/: llama_cpp.env.example  ollama.env.example  openai.env.example
langchain/: Makefile  __init__.py  main.py  tests.py
langchain-index/: main.py
llamaindex/: html_loader.py  main.py  tests.py
llamaindex-index/: main.py
prepare/: main.py
src/: __init__.py  chain.py  index.py  main.py
tests/: test_chat.py  tests.py
(+21 files in other folders)
